syntax = "proto3";

package envoy.extensions.filters.http.oauth.v3;

import "google/protobuf/duration.proto";

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.oauth.v3";
option java_outer_classname = "OauthProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: OAuth]
// OAuth :ref:`configuration overview <config_http_filters_oauth>`.
// [#extension: envoy.filters.http.oauth]
//

message OAuth2Credentials {
  // The client_id to be used in the authorize calls.
  string client_id = 1;

  // The config name in SDS that contains the client secret that will be used
  // to get an access token.
  string client_secret_config_name = 2;

  // The config name in SDS that contains the token secret that will be used
  // to perform the HMAC validation.
  string token_secret_config_name = 3;
}

// OAuth filter config
//
// [#next-free-field: 11]
message OAuth2 {
  // The cluster that has the SDS generic secrets.
  string secrets_cluster = 1 [(validate.rules).string = {min_bytes: 1}];

  // The upstream cluster where the OAuth server is defined. This is required due limitations
  // in Envoy's HTTP AsyncClient implementation.
  string cluster = 2 [(validate.rules).string = {min_bytes: 1}];

  // The full domain of the OAuth server.
  string hostname = 3 [(validate.rules).string = {min_bytes: 1}];

  // A struct with the credentials required for OAuth
  OAuth2Credentials credentials = 4;

  // The callback path the OAuth server should use. Default is /_oauth.
  string callback_path = 5;

  // The path to sign a user out, clearing their credential cookies. Default is /_signout.
  string signout_path = 6;

  // The duration for outgoing auth requests. Default is 3s.
  google.protobuf.Duration timeout = 7;

  // Forward the OAuth token as a Bearer to upstream web service.
  bool forward_bearer_token = 8;

  // Whitelisted paths.
  //
  // TODO: We shouldn't continue doing this. We definitely should not
  // whitelist on any other parameter, especially method. However, as many clients of Envoy
  // have implementations where adding mTLS would be nontrivial, we expose this option.
  repeated string whitelisted_paths = 9;

  // Allow HTTP OPTIONS requests to pass-through (CORS preflight workaround).
  bool pass_through_options_method = 10;
}
